add ship generator
